--------- Market Version 55 (2.05) --------------
 * Fixed race condition error
 
--------- Market Version 54 (2.04) --------------
 * Fixed bugs related to project loading

--------- Market Version 53 (2.03) --------------
 * Another bugfix release
 
--------- Market Version 52 (2.02) --------------
 * Bug fixes (forgot to load libpathvariable.so)
 
--------- Market Version 51 (2.01) --------------
 * New logo
 * Bug fixes
 
--------- Market Version 50 (2.0) --------------
 * New connector interface
 * New internal backend system (no new user features yet)
 * Bug fixes

--------- Market Version 43 (1.42) --------------
 * UI improvements for tablet devices
 * Corrected Jam behavior on tablets
 
--------- Market Version 42 (1.41) --------------
 * Undo feature added to the note editor
 * Minor UI changes
 
--------- Market Version 41 (1.40) --------------
 * Added support for 24bit Wave files
 * Convert Jam sessions to loops (so you can edit)
 * Quantize Jam sessions and loops
 * Shift loop notes left&right

--------- Market Version 40 (1.39) --------------
 * Completely new tracker
 * Fixed a bug in Europa4 when using unison mode

--------- Market Version 39 (1.38) --------------
 * UI changes
 * Bugfixes
 
--------- Market Version 38 (1.37) --------------
 * Sample management simplifications
 * Bugfixes

--------- Market Version 37 (1.36) --------------
 * Cosmetic UI changes
 * Bugfixes

--------- Market Version 36 (1.35) --------------
 * New multi voice chorus effect (stereo)
 * Speed-up of the start screen
 * Minor bugfixes
 
--------- Market Version 35 (1.34) --------------
 * Faster project loading
 * Set OpenSL buffered/direct mode depending on device type 
 
--------- Market Version 34 (1.33) --------------
 * Improved the JAM/livepad design to support longer motions better
 * Let the user record arbitrarily long JAM sessions (until record is turned off)
 * Velocity can be changed during arpeggiator playback of the same tones