@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.holidaystudios.vuknob"
 	  android:installLocation="auto"
-	  android:versionCode="55"
-      android:versionName="2.05"
+	  android:versionCode="56"
+      android:versionName="2.06"
  >
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.WAKE_LOCK" />
