@@ -63,7 +63,7 @@
 #define PAD_VZONES 8
 
 #define MAX_ACTIVE_NOTES 16
-#define MAX_BUILTIN_ARP_PATTERNS 6
+#define MAX_BUILTIN_ARP_PATTERNS 7
 #define MAX_ARP_PATTERN_LENGTH 16
 
 // PAD_TIME(line,tick)
