@@ -1,3 +1,7 @@
+--------- Market Version 56 (2.06) --------------
+ * New arpeggio pattern
+ * Support for remote control of vuKNOB on the local network
+ 
 --------- Market Version 55 (2.05) --------------
  * Fixed race condition error
  
